--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,39 @@
+body {
+	background: rgb(245, 245, 245);
+	zoom: 1;
+}
+.settings {
+	position: fixed;
+	bottom: 0;
+	left: 50%;
+	width: 90vw;
+	max-width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	column-gap: 1vw;
+	transform: translate(-50%,0);
+	background: rgb(30, 30, 30);
+}
+.settings * {
+/*	max-width: 100%;*/
+	font-size: 3vw;
+}
+.settings label {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 .settings-input {
-	width: 40px;
+	width: 10vw;
 	aspect-ratio: 16/9;
 	background: rgb(30, 30, 30);
 	color: rgb(233, 233, 233);
 	border: none;
 	padding: 2px 5px;
-	font-size: 1.5rem;
+	font-size: 3vw;
 	border-radius: 5px;
+	text-align: center;
 }
 .settings-btn {
 	border-radius: 5px;
@@ -14,9 +41,9 @@
 /*	aspect-ratio: 16/9;*/
 	background: rgb(30, 30, 30);
 	color: rgb(233, 233, 233);
-	border: none;
+	border: rgb(233, 233, 233) 1px solid;
 	padding: 2px 5px;
-	font-size: 1.2rem;
+	font-size: 3vw;
 }
 .settings-btn:hover, .settings-input:hover {
 	background: rgb(10, 10, 10);
@@ -26,17 +53,31 @@
 	display: inline-block;
 	font-family: sans-serif;
 	font-weight: bold;
-	color: rgb(30, 30, 30);
+	color: rgb(245, 245, 245);
 }
 div.cell-container {
 	display: grid;
 }
 .cell {
 	border: rgb(30, 30, 30) 1px solid;
+	font-size: 3rem;
+	text-align: center;
+	cursor: default;
+	font-family: sans-serif;
+	font-weight: bold;
+	aspect-ratio: 1/1;
 }
 .alive {
-	background: rgb(5, 5, 5);
+	background: rgb(30, 30, 30);
 }
 .dead {
-	background: rgb(250, 250, 250);
+	background: rgb(245, 245, 245);
 }
+
+/*@media (max-width: 520px) {
+	.settings {
+		display: grid;
+		grid-template-rows: repeat(2, 1fr);
+		grid-template-columns: repeat(2, 1fr);
+	}
+}*/
